<resources>
    <string name="app_name">CS480Crypto</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="goto_register">Need an account? Register</string>
    <string name="wrongCredentials">Incorrect username or password</string>

    <!-- Strings related to register -->
    <string name="title_activity_register">Register</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="prompt_phone">Phone # for 2FA (optional)</string>
    <string name="action_register">Register</string>

    <!-- 2FA Strings -->
    <string name="TwoFAInstruction">A code has been sent to your email.\nEnter it below to login:</string>
    <string name="code">Code</string>
    <string name="trustDevice">Trust device (Disable 2 factor authentication for future logins)</string>
    <string name="continueBtn">Continue</string>
    <string name="wrongCode">Incorrect code</string>

    <!-- Main Activity Strings -->
    <string name="apiLabel">API Key</string>
    <string name="secretLabel">Secret Key</string>
    <string name="saveApiInfo"> Save API Info</string>

    <!-- random strings for alberts part -->
    <string name="serviceFeeText">will be charged to your wallet as a service fee</string>
    <string name="sendText">Send</string>
    <string name="sendMoneyToText">Send money to : </string>
    <string name="fromWalletText">From wallet:</string>
    <string name="amountText">Amount:</string>
    <string name="empty"></string>
    <string name="dogeCoinTestAdress">2MxviUjH41KYbgndhTQe6LstF1yqyqKhqEb</string>
    <string name="_3_00">1.00</string>

    <string-array name="coin_array">
        <item>Dogecoin</item>
        <item>Bitcoin</item>
        <item>Litecoin</item>

    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
