<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.robertgil.cs480crypto.TwoFactorAuthActivity"
    tools:layout_editor_absoluteY="25dp">

    <AutoCompleteTextView
        android:id="@+id/code"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:hint="@string/code"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/TwoFAInstruction" />

    <TextView
        android:id="@+id/wrongCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/wrongCode"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/trustDevice" />

    <TextView
        android:id="@+id/TwoFAInstruction"
        android:layout_width="280dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="192dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/TwoFAInstruction"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/trustDevice"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:text="@string/trustDevice"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/continueButton" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="289dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/continueBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/code" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="61dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="61dp" />

</android.support.constraint.ConstraintLayout>
