<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundsolid"
    tools:context="com.example.robertgil.cs480crypto.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="25dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="45dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center"
                android:text="@string/apiLabel" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|clip_horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/apiKeyInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center_vertical|center_horizontal" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|center"
                android:paddingTop="20dp"
                android:text="@string/secretLabel" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:gravity="center_horizontal|clip_horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/secretKeyInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/saveApiInfo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="25dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:paddingTop="0dp"
                android:text="@string/saveApiInfo" />

            <TextView
                android:id="@+id/loggedInAs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:gravity="center_horizontal"
                android:paddingTop="248dp"
                android:text="test" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
